--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -8,10 +8,6 @@ services:
     build: .
     image: mima84/docker-freepbx
     container_name: freepbx
-    ports:
-    - "5160:5160/udp"
-    - "8082:80/tcp"
-    - "10000-10050:10000-10050/udp"
-
+    network_mode: "host"
     volumes:
     - ~/.freepbx/backup:/var/spool/asterisk/backup
