--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,12 @@ services:
     image: mima84/docker-freepbx
     container_name: freepbx
 
-    ports:
-    - "5160-5161:5160-5161/udp"
-    - "8082:80/tcp"
-    - "10000-10050:10000-10050/udp"
+    network_mode: "host"
+#    ports:
+#    - "5160-5161:5160-5161/udp"
+#    - "5060-5060:5060-5060/udp"
+#    - "8082:80/tcp"
+#    - "10000-10050:10000-10050/udp"
 
     volumes:
     - ~/.freepbx/backup:/var/spool/asterisk/backup
