mysql no network, create named volumes, download sound first (avoid new download)

--- a/conf/cdr/odbc.ini
+++ b/conf/cdr/odbc.ini
@@ -2,7 +2,7 @@
 Description     = MySQL connection to 'asterisk' database
 Driver          = MySQL
 Database        = asteriskcdrdb
-Server          = localhost
-Port            = 3306
+Server          = 
+Port            = 
 Option          = 3
-Socket          =
+Socket          = /var/run/mysqld/mysqld.sock
