--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,3 @@
-# docker-compose up -d
-# docker-compose down
-# docker exec -it freepbx bash
-
 version: '2'
 services:
   freepbx:
@@ -13,9 +9,19 @@ services:
     ports:
     - "5160-5161:5160-5161/udp"
     - "5060-5060:5060-5060/udp"
-    - "8082:80/tcp"
+    - "8082:8082/tcp"
     - "10000-10050:10000-10050/udp"
-
+    
     volumes:
-    - ~/.freepbx/backup:/var/spool/asterisk/backup
-    - /etc/hostname:/etc/hostname:ro
+      - freepbx-apache:/etc/apache2
+      - freepbx-asterisk-config:/etc/asterisk
+      - freepbx-mysql:/var/lib/mysql
+      - freepbx-asterisk-spool:/var/spool/asterisk
+      - freepbx-asterisk-data:/var/lib/asterisk
+
+volumes:
+  freepbx-apache:
+  freepbx-asterisk-config:
+  freepbx-mysql:
+  freepbx-asterisk-spool:
+  freepbx-asterisk-data:
